--- a/3-CSS-fundamentals/challenges/assets/css/style.css
+++ b/3-CSS-fundamentals/challenges/assets/css/style.css
@@ -1,58 +1,83 @@
-h1, h2, h3, h4{
+h1,
+h2,
+h3,
+h4,
+p,
+li {
   font-family: sans-serif;
+  color: #444444;
+}
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
 }
 
 h1 {
-  color: blue;
   font-size: 26px;
   text-transform: uppercase;
   font-style: italic;
 }
 
-h2{
+h2 {
   font-size: 40px;
 }
 
-h3{
+h3 {
   font-size: 30px;
 }
 
-h4{
+h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
 }
 
-p{
+p {
   font-family: sans-serif;
   font-size: 22px;
   line-height: 1.5;
 }
 
-b{
+b {
   font-family: sans-serif;
   font-style: italic;
 }
 
-li{
+li {
   font-family: sans-serif;
   font-size: 20px;
 }
 
-#author{
+#author {
   font-style: italic;
   font-size: 18px;
 }
 
-.copy{
+.copy {
   font-size: 15px;
 }
 
-.related-author{
+.related-author {
   font-size: 18px;
   font-weight: bold;
 }
 
-.related-post{
+.related-post {
   list-style: none;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+body{
+  
 }
