--- a/3-CSS-fundamentals/challenges/assets/css/style.css
+++ b/3-CSS-fundamentals/challenges/assets/css/style.css
@@ -78,6 +78,34 @@ aside {
   border-bottom: 5px solid #1098ad;
 }
 
-body{
-  
+/* li:first-child {
+  font-weight: bold;
+}
+
+li:last-child{
+  font-style: italic;
+}
+
+li:nth-child(3){
+  font-weight: bolder;
+} */
+
+a{
+  color: #1098ad;
+  text-decoration: none;
+}
+
+a:visited{
+  color: #1098ad;
+}
+
+a:hover{
+  color: orangered;
+  font-weight: bold;
+  text-decoration: underline wavy black;
+}
+
+a:active{
+  color: green;
+  background-color: black;
 }
