Learn HTML and CSS

--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
@@ -1,10 +1,35 @@
 *{
   color: #444;
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body{
-  border-top: 7px solid #1098AD;
+  border-top: 10px solid #1098AD;
+}
+
+
+.main-header {
+  background-color: #F7F7F7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+}
+
+
+nav{
+  font-size: 20px;
+}
+
+article{
+  margin-bottom: 60px;
+}
+
+aside {
+  background-color: #F7F7F7;
+  border-top: 5px solid #1098AD;
+  border-bottom: 5px solid #1098AD;
+  padding: 50px 0px;
 }
 
 h1,
@@ -21,10 +46,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -37,6 +65,7 @@ p {
   font-family: sans-serif;
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 40px;
 }
 
 b {
@@ -44,14 +73,28 @@ b {
   font-style: italic;
 }
 
+ul, ol{
+  margin-left: 50px;
+  margin-bottom: 20px;
+}
+
 li {
   font-family: sans-serif;
   font-size: 20px;
+  margin-bottom: 10px;
+}
+
+li:last-child{
+  margin-bottom: 0;
 }
 
 #author {
   font-style: italic;
   font-size: 18px;
+}
+
+.post-header{
+  margin-bottom: 40px;
 }
 
 .copy {
@@ -67,15 +110,6 @@ li {
   list-style: none;
 }
 
-.main-header {
-  background-color: #F7F7F7;
-}
-
-aside {
-  background-color: #F7F7F7;
-  border-top: 5px solid #1098AD;
-  border-bottom: 5px solid #1098AD;
-}
 
 /* li:first-child {
   font-weight: bold;
@@ -107,8 +141,4 @@ a:hover{
 a:active{
   color: green;
   background-color: black;
-}
-
-nav{
-  font-size: 20px;
 }
