--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/styles.css
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/styles.css
@@ -23,16 +23,23 @@ article h3{
   text-transform: uppercase;
   font-weight: bold;
   font-size: 13px;
+  margin-bottom: 20px;
 }
 
 .product__title{
   text-transform: uppercase;
   background-color: lightgrey;
   text-align: center;
+  padding: 15px;
 }
 
 .product__details{
+  margin-top: 30px;
   text-transform: uppercase;
+}
+
+.product__information{
+  margin-bottom: 20px;
 }
 
 .button{
@@ -41,17 +48,29 @@ article h3{
   font-size: 18px;
   text-transform: uppercase;
   border: none;
+  padding: 15px;
+  width: 100%;
 }
 
 .button:hover{
   background-color: white;
   color: black;
+  border-top: 5px solid black;
+}
+
+p{
+  margin-bottom: 10px;
 }
 
 ul,
 ol {
   margin-left: 30px;
+  margin-top: 10px;
   margin-bottom: 20px;
+}
+
+li{
+  margin-bottom: 10px;
 }
 
 article a{
