--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
@@ -7,6 +7,7 @@
 
 body {
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
@@ -14,13 +15,14 @@ body {
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
+  position: relative;
 }
 
 .main-header {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
+  /* height: 80px; */
 }
 
 nav {
@@ -41,6 +43,7 @@ aside {
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
   padding: 50px 0px;
+  width: 60%;
 }
 
 h1,
@@ -94,6 +97,7 @@ li {
   font-family: sans-serif;
   font-size: 20px;
   margin-bottom: 10px;
+  display: inline;
 }
 
 li:last-child {
@@ -152,4 +156,27 @@ a:hover {
 a:active {
   color: green;
   background-color: black;
+}
+
+nav a:link{
+  display: inline-block;
+  margin-right: 25px;
+  margin-top: 15px;
+}
+
+nav a:link:last-child{
+  margin-right: 0px;
+}
+
+.like__button{
+  padding: 20px;
+  cursor: pointer;
+  font-size: 22px;
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  font-weight: bold;
+  border-radius: 50%;
+  background-color: #F7F7F7;
+  border: 4px solid #1098AD;
 }
