--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/styles.css
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/styles.css
@@ -1,24 +1,89 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-.container{
+.container {
   width: 70%;
   margin: 5% auto;
   border: 5px solid black;
 }
 
-body{
+body {
+  position: relative;
   font-family: sans-serif;
 }
 
-article h3{
+.sale__tag {
+  background-color: #d30000;
+  color: white;
+  position: absolute;
+  font-size: 16px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  padding: 5px 10px;
+  top: -12px;
+  left: 200px;
+}
+
+article h3 {
   font-size: 25px;
   font-weight: bold;
 }
 
-.product__highlight{
+.color__sample {
+  margin-top: 20px;
+}
+
+.black__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: black;
+}
+
+.blue__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: blue;
+}
+
+.red__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: red;
+}
+
+.yellow__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: yellow;
+}
+
+.green__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: green;
+}
+
+.brown__color {
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  margin-right: 10px;
+  background-color: brown;
+}
+
+.product__highlight {
   color: grey;
   text-transform: uppercase;
   font-weight: bold;
@@ -26,23 +91,23 @@ article h3{
   margin-bottom: 20px;
 }
 
-.product__title{
+.product__title {
   text-transform: uppercase;
   background-color: lightgrey;
   text-align: center;
   padding: 15px;
 }
 
-.product__details{
+.product__details {
   margin-top: 30px;
   text-transform: uppercase;
 }
 
-.product__information{
+.product__information {
   margin-bottom: 20px;
 }
 
-.button{
+.button {
   background-color: black;
   color: white;
   font-size: 18px;
@@ -52,13 +117,13 @@ article h3{
   width: 100%;
 }
 
-.button:hover{
+.button:hover {
   background-color: white;
   color: black;
   border-top: 5px solid black;
 }
 
-p{
+p {
   margin-bottom: 10px;
 }
 
@@ -69,14 +134,14 @@ ol {
   margin-bottom: 20px;
 }
 
-li{
+li {
   margin-bottom: 10px;
 }
 
-article a{
+article a {
   color: black;
 }
 
-article a:hover{
+article a:hover {
   text-decoration: none;
 }
