--- a/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
+++ b/learning-to-code/Learn-HTML-and-CSS/3-CSS-fundamentals/challenges/css/style.css
@@ -158,17 +158,17 @@ a:active {
   background-color: black;
 }
 
-nav a:link{
+nav a:link {
   display: inline-block;
   margin-right: 25px;
   margin-top: 15px;
 }
 
-nav a:link:last-child{
+nav a:link:last-child {
   margin-right: 0px;
 }
 
-.like__button{
+.like__button {
   padding: 20px;
   cursor: pointer;
   font-size: 22px;
@@ -177,22 +177,22 @@ nav a:link:last-child{
   right: 50px;
   font-weight: bold;
   border-radius: 50%;
-  background-color: #F7F7F7;
-  border: 4px solid #1098AD;
+  background-color: #f7f7f7;
+  border: 4px solid #1098ad;
 }
 
-h1::first-letter{
+h1::first-letter {
   font-style: normal;
   margin-right: 5px;
 }
 
-h2{
+h2 {
   position: relative;
 }
 
-h2::after{
+h2::after {
   content: "NEW";
-  background-color: #FFE70E;
+  background-color: #ffe70e;
   color: #000000;
   font-size: 15px;
   font-weight: bold;
