--- a/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/style.css
+++ b/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  width: 70%;
+  width: 80%;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -220,4 +220,22 @@ h1 {
 
 nav {
   float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+article {
+  width: 70%;
+  float: left;
+}
+
+aside {
+  width: 30%;
+  float: right;
+}
+
+footer {
+  clear: both;
 }
