--- a/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/style.css
+++ b/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/style.css
@@ -42,8 +42,9 @@ aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0px;
-  width: 60%;
+  padding: 50px 40px;
+  box-sizing: border-box;
+  
 }
 
 h1,
@@ -73,6 +74,7 @@ h4 {
   font-size: 20px;
   text-transform: uppercase;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 p {
@@ -124,6 +126,7 @@ li:last-child {
 
 .related-post {
   list-style: none;
+  margin-left: 0;
 }
 
 /* li:first-child {
