--- a/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/styles.css
+++ b/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
@@ -83,12 +84,18 @@ article h3 {
   background-color: brown;
 }
 
+.product__price{
+  font-size: 24px;
+  float: left;
+}
+
 .product__highlight {
   color: grey;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 13px;
   margin-bottom: 20px;
+  float: right;
 }
 
 .product__title {
@@ -101,6 +108,10 @@ article h3 {
 .product__details {
   margin-top: 30px;
   text-transform: uppercase;
+}
+
+.product__description{
+  clear: both;
 }
 
 .product__information {
@@ -146,11 +157,20 @@ article a:hover {
   text-decoration: none;
 }
 
-header{
+.product__image{
+  width: 25%;
+  float: left;
+  margin-right: 5%;
 }
 
-article {
+.product__info {
+  padding-top: 5%;
+  width: 25%;
+  float: left;
+  margin-right: 5%;
 }
 
-aside {
+.other__details {
+  width: 25%;
+  float: left;
 }
