--- a/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/styles.css
+++ b/learning-to-code/Learn-HTML-and-CSS/4-layouts-funamentals/challenges/css/styles.css
@@ -96,6 +96,7 @@ article h3 {
   font-size: 13px;
   margin-bottom: 20px;
   float: right;
+  margin-top: 8px;
 }
 
 .product__title {
@@ -108,10 +109,12 @@ article h3 {
 .product__details {
   margin-top: 30px;
   text-transform: uppercase;
+  margin-bottom: 20px;
 }
 
 .product__description{
   clear: both;
+  margin-bottom: 30px;
 }
 
 .product__information {
@@ -158,19 +161,19 @@ article a:hover {
 }
 
 .product__image{
-  width: 25%;
+  width: 27%;
   float: left;
   margin-right: 5%;
 }
 
 .product__info {
-  padding-top: 5%;
-  width: 25%;
+  padding-top: 3%;
+  width: 27%;
   float: left;
   margin-right: 5%;
 }
 
 .other__details {
-  width: 25%;
+  width: 27%;
   float: left;
 }
